--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
 </head>
-<body>
-    <span class="glyphicon glyphicon-search"></span>
+<body style="background-color: #fff">
     <div id="app">
         <!--{{msg}}-->
         <!--<login></login>-->
